--- a/playbook.yaml
+++ b/playbook.yaml
@@ -37,7 +37,7 @@
         enabled: true
     - name: Pull Docker image from DockerHub
       community.docker.docker_image:
-        name:  "{{ docker_image }}"
+        name:  mostafahu/flask-weather-app:18
         source: pull
 
 
@@ -52,7 +52,7 @@
     - name: Run Docker container
       community.docker.docker_container:
         name: flask-weather-app-container
-        image:  "{{ docker_image }}"
+        image:  mostafahu/flask-weather-app:18
         state: started
         ports:
           - "5000:5000"
